transform and shape

--- a/MyOLRenderer/MyOLRenderer.vcxproj.filters
+++ b/MyOLRenderer/MyOLRenderer.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="src\core\transform.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\interaction.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\shape.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\MyOFRenderer.h">
@@ -36,6 +42,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\core\transform.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\interaction.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\shape.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
