--- a/MyOLRenderer/MyOLRenderer.vcxproj
+++ b/MyOLRenderer/MyOLRenderer.vcxproj
@@ -141,12 +141,16 @@
   <ItemGroup>
     <ClCompile Include="MyOLRenderer.cpp" />
     <ClCompile Include="src\core\geometry.cpp" />
+    <ClCompile Include="src\core\shape.cpp" />
     <ClCompile Include="src\core\transform.cpp" />
+    <ClCompile Include="src\core\interaction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\geometry.h" />
     <ClInclude Include="src\core\MyOFRenderer.h" />
+    <ClInclude Include="src\core\shape.h" />
     <ClInclude Include="src\core\transform.h" />
+    <ClInclude Include="src\core\interaction.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
