--- a/MyOLRenderer/MyOLRenderer.vcxproj
+++ b/MyOLRenderer/MyOLRenderer.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="src\core\transform.cpp" />
     <ClCompile Include="src\core\interaction.cpp" />
     <ClCompile Include="src\shapes\sphere.cpp" />
+    <ClCompile Include="src\shapes\triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\geometry.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="src\core\transform.h" />
     <ClInclude Include="src\core\interaction.h" />
     <ClInclude Include="src\shapes\sphere.h" />
+    <ClInclude Include="src\shapes\triangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
