--- a/MyOLRenderer/MyOLRenderer.vcxproj.filters
+++ b/MyOLRenderer/MyOLRenderer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\shapes\sphere.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\shapes\triangle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\MyOFRenderer.h">
@@ -54,6 +57,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\shapes\sphere.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\shapes\triangle.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
